--- a/telegraf/docker-compose.yml
+++ b/telegraf/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   telegraf:
-    container_name: telefraf
+    container_name: telegraf
     image: telegraf:1.21.2-alpine
     volumes:
     - ./telegraf/etc/telegraf.conf:/etc/telegraf/telegraf.conf:ro
